@@ -1,3 +1,9 @@
+2008-03-21  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Document s2s_default_policy and
+	s2s_host (EJAB-575)
+	* doc/guide.html: Likewise
+
 2008-03-21  Christophe Romain <christophe.romain@process-one.net>
 
 	* src/pam/epam.erl: Seek epam binary into priv/bin (EJAB-573)
